# pw-vault

./: .gitignore  README.md  pw-vault.spec  pyproject.toml
src/: config.py  crypto.py  main.py  utils.py
tests/: test_pwvault.py
