[project]
name = "pwvault"
version = "0.1.0"
description = "A simple password vault application written in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "keyring>=25.7.0",
    "platformdirs>=4.9.4",
    "pyinstaller>=6.19.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
